[package]
name = "hangman_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0"                               # For JSON specific operations
rand = "0.8.5"                                   # For random number generation